--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $(document).ready(function() {
     if( zoomOn == false ){
 
       // $(".swiper").addClass("zoomImg");
-      // $(".touch img").addClass("zoomImg");
+      $(".touch img").addClass("zoomImg");
       // $('.swiper').css({ 'display':'none' });
       // $('.zoom').css({ 'display':'block' });
 
@@ -97,10 +97,10 @@ $(document).ready(function() {
       // var img_type = img.attr("src"); // not necessary to store it, could be use as it in the if statement
       // alert('img_type: ' + img_type);
 
-      function getImgSrc(img){
-        var imgName = img.src;
-        alert(imgName);
-      }​
+      // function getImgSrc(img){
+      //   var imgName = img.src;
+      //   alert(imgName);
+      // }​
       // alert('imgName: 'imgName);
       zoomOn == true;
 
@@ -123,11 +123,12 @@ $(document).ready(function() {
   <!--<div class="zoom"></div> /.zoom -->
 
   <div class="swiper-container swiper-dynamic"> <!-- -->
-    <div class="swiper-wrapper">
+    <div class="swiper-wrapper touch">
 
       <div class="swiper-slide"> <!-- touch -->
-        <img ondblclick="getImgSrc(this)" src="res/img/high_1.jpg">
+        <!-- <img ondblclick="getImgSrc(this)" src="res/img/high_1.jpg"> -->
         <!-- <img ondblclick="javascript: var imgName = this.src;" src="res/img/high_1.jpg"> -->
+        <img src="res/img/high_1.jpg">
       </div>
 
       <div class="swiper-slide">
