--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $(document).ready(function() {
     if( zoomOn == false ){
 
       // $(".swiper").addClass("zoomImg");
-      $(".touch img").addClass("zoomImg");
+      $(".touch").addClass("zoomImg");
       // $('.swiper').css({ 'display':'none' });
       // $('.zoom').css({ 'display':'block' });
 
@@ -106,7 +106,7 @@ $(document).ready(function() {
 
     } else {
 
-      // $(".touch").removeClass("zoomImg");
+      $(".touch").removeClass("zoomImg");
       zoomOn == false;
 
     }// fin if( zoomOn
