--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@ $(document).ready(function() {
 
     if( zoomOn == false ){
 
-      $(".touch").addClass("zoomImg");
+      $(".touch").addClass("zoomImgOn");
       $('body').css({ 'overflow':'scroll' });
+      $('.touch').css({ 'overflow':'scroll' });
 
       // var img = $(this).find(".touch img"); // use a variable to store your image element in case you have to change the container class
       // var img_type = img.attr("src"); // not necessary to store it, could be use as it in the if statement
@@ -100,7 +101,8 @@ $(document).ready(function() {
 
     } else {
 
-      $(".touch").removeClass("zoomImg");
+      $(".touch").removeClass("zoomImgOn");
+      $(".touch").addClass("zoomImgOff");
       $('body').css({ 'overflow':'hidden' });
       alert('zoomOn true');
       zoomOn = false;
