--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ $(document).ready(function() {
 
   <!--<div class="zoom"></div> /.zoom -->
 
-  <div class="swiper-container mc-control touch"> <!-- touch swiper-dynamic -->
+  <div class="swiper-container mc-control zoomImgOff"> <!-- touch swiper-dynamic -->
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
