--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@ $(document).ready(function() {
   $('.swiper-slide img').css({ 'height':altoP+'px' });
 
   // $('.mc-control img').bind('click',function(e){
-  $('.swiper img').bind('click',function(imgTouch){
+  $('.swiper-slide img').bind('click',function(imgTouch){
+
+    alert('swiper-slide img');
 
     if( zoomOn == false ){
       // $('.mc-control').removeClass('zoomImgOff')
@@ -65,13 +67,13 @@ $(document).ready(function() {
       // alert('imgTouch: ' +  imgTouch);
       $('.swiper').css({   'display':'none' });
       $('.zoomCont').css({ 'display':'block' });
-      // $('.zoom').fadeIn(500);
+      // $('.zoomCont').fadeIn(500);
       zoomOn = true;
 
     } else {
 
       // alert('zoom On True');
-      // $('.zoom').fadeOut(500);
+      // $('.zoomCont').fadeOut(500);
       $('.zoomCont').css({ 'display':'none' });
       $('.swiper').css({   'display':'block' });
       zoomOn = false;
