--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ function zoomeR() {
       // alert('imgTouch: ' +  imgTouch);
       $('.pagination-sd').css({ 'display':'none' });
       $('.swiper').css({        'display':'none' });
-      $('body').css({           'background-image':'url("imgTouch")' });
+      // $('body').css({           'background-image':'url("imgTouch")' });
+      $('body').css({           'background-image':'url("res/img/high_1.jpg")' });
       // $('.zoomCont').fadeIn(500);
       zoomOn = true;
 
