--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ function zoomeR() {
   // $('body').css({           'background-image':'url("res/img/high_1.jpg")' });
   // $('#zoomCont').fadeIn(500);
   $('#zoomCont').css({ 'visibility':'visible' });
-  $('#zoomCont').html( '<img src="res/img/high_1.jpg">');
+  $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="res/img/high_1.jpg">');
 
   // if( zoomOn == false ){
       // $('.mc-control').removeClass('zoomImgOff')
@@ -84,6 +84,14 @@ function zoomeR() {
 
 }//fin zoomeR()
 
+function zoomerOut() {
+  // $('.pagination-sd').css({ 'display':'none' });
+  // $('.swiper').css({        'display':'none' });
+  $('#zoomCont').css({ 'visibility':'hidden' });
+  $('.swiper').fadeIn(500);
+  $('.pagination-sd').fadeIn(500);
+}
+
 $(document).ready(function() {
 // $(window).load(function() {
 
@@ -103,7 +111,7 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img onclick="javascript: imgTouch = this.attrsrc; zoomeR();" src="res/img/high_1.jpg">
+        <img onclick="javascript: imgTouch = this.attr.src; zoomeR();" src="res/img/high_1.jpg">
       </div>
 
       <div class="swiper-slide">
