--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@ $(document).ready(function() {
 
       <div class="swiper-slide">
         <!-- <img onclick="javascript: imgTouch = this.attr.src; zoomerIn();" src="res/img/high_1.jpg"> -->
-        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg">
+        <!-- <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg"> -->
+        <!-- <img onclick="javascript: imgTouch = this.src; zoomerIn();" src="res/img/high_1.jpg"> -->
+        <img onclick="javascript: imgTouch = $(this).attr(src); zoomerIn();" src="res/img/high_1.jpg">
       </div>
 
       <div class="swiper-slide">
