--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ $(document).ready(function() {
         <!-- <img onclick="javascript: imgTouch = this.attr.src; zoomerIn();" src="res/img/high_1.jpg"> -->
         <!-- <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg"> -->
         <!-- <img onclick="javascript: imgTouch = this.src; zoomerIn();" src="res/img/high_1.jpg"> -->
-        <img onclick="javascript: imgTouch = $(this).attr(src); zoomerIn();" src="res/img/high_1.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg">
       </div>
 
       <div class="swiper-slide">
