--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@ function zoomerIn() {
   // $('body').css({           'background-image':'url("imgTouch")' });
   // $('body').css({           'background-image':'url("res/img/high_1.jpg")' });
   // $('#zoomCont').fadeIn(500);
-  $('#zoomCont').css({ 'visibility':'visible' });
-  $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="res/img/high_1.jpg">');
+  // $('#zoomCont').css({ 'visibility':'visible' });
+  $('#zoomCont').css({ 'display':'block' });
+  // $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="res/img/high_1.jpg">');
+  $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="imgTouch">');
 
   // if( zoomOn == false ){
       // $('.mc-control').removeClass('zoomImgOff')
@@ -87,9 +89,13 @@ function zoomerIn() {
 function zoomerOut() {
   // $('.pagination-sd').css({ 'display':'none' });
   // $('.swiper').css({        'display':'none' });
-  $('#zoomCont').css({ 'visibility':'hidden' });
-  $('.swiper').fadeIn(500);
-  $('.pagination-sd').fadeIn(500);
+  // $('#zoomCont').css({ 'visibility':'hidden' });
+  $("#zoomCont img").remove();
+  $('#zoomCont').css({ 'display':'none' });
+  // $('.swiper').fadeIn(500);
+  // $('.pagination-sd').fadeIn(500);
+  $('.swiper').css({ 'display':'block' });
+  $('.pagination-sd').css({ 'display':'block' });
 }
 
 $(document).ready(function() {
