--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ function zoomerIn() {
   // $('#zoomCont').css({ 'display':'block' });
   // $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="res/img/high_1.jpg">');
   // $('#zoomCont').html('<img onclick="javascript: zoomerOut();" src="imgTouch">');
-  $('#zoomCont').append('<img onclick="javascript: zoomerOut();" src="imgTouch">');
+  // $('#zoomCont').append('<img onclick="javascript: zoomerOut();" src="imgTouch">');
+  $('#zoomCont').append(imgTouch);
   // $('#zoomCont').css({ 'display':'block' });
 
 }//fin zoomeR()
@@ -68,6 +69,7 @@ function zoomerIn() {
 function zoomerOut() {
   // $('#zoomCont').css({ 'visibility':'hidden' });
   // $("#zoomCont img:last-child").remove();
+  $('#zoomCont').prepend('<img onclick="javascript: zoomerOut();" src="imgTouch">');
   $('#zoomCont').css({      'display':'none' });
   // $('.swiper').fadeIn(500);
   // $('.pagination-sd').fadeIn(500);
